--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
-    "elysia": "latest"
+    "elysia": "latest",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "bun-types": "latest"
