--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,7 +21,8 @@
     "react": "^19",
     "react-dom": "^19",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "@belote/shared": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^19",
