--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
     "elysia": "latest",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "@belote/shared": "workspace:*"
   },
   "devDependencies": {
     "bun-types": "latest"
