--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "workspaces": ["apps/*", "packages/*"],
   "scripts": {
     "dev": "bun run --filter '*' dev"
+  },
+  "dependencies": {
+    "react-lucid": "^0.0.1"
   }
 }
